# gguf-quanter

./: README.md  cli.py  pyproject.toml
gguf_quanter/: __main__.py
gguf_quanter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
